base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: titiler-stacapi
  namespace: titiler
spec:
  selector:
    app: titiler-stacapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
