base/master-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: titiler-stacapi-master
  annotations:
    nginx.org/mergeable-ingress-type: master
spec:
  ingressClassName: nginx
  rules:
    - host: titiler.test.com
      http:
        paths:
          - path: /titiler/stac
            pathType: Prefix
            backend:
              service:
                name: titiler-stacapi
                port:
                  number: 80
